# link-shortener

./: Cargo.toml  README.md
.github/workflows/: publish.yml
client/: README.md  astro.config.mjs  package.json  tailwind.config.cjs
client/src/components/: AuthCheck.svelte  Clipboard.svelte  LinkList.svelte  LogOutButton.svelte  NewLinkForm.svelte  TableRow.svelte  Toaster.jsx
client/src/components/layout/: BaseHead.astro
client/src/layouts/: BaseLayout.astro
client/src/pages/: dash.astro  index.astro  login.astro
client/src/styles/: global.css
src/: handle_admin.rs  main.rs  mongo.rs
