[package]
name = "link-shortener"
version = "0.1.2"
edition = "2021"
license = "MIT"
authors = ["Mikkel-T <mikkel@mikkel-t.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.2.2"
serde = { version = "1.0", features = ["derive"] }
actix-web = "4.1.0"
dotenv = "0.15.0"
actix-identity = "0.4.0"
actix-files = "0.6.1"
serde_json = "1"
futures = "0.3"
url = "2"
