[package]
name = "link-shortener"
version = "0.1.3"
edition = "2021"
license = "MIT"
authors = ["Mikkel-T <mikkel@mikkel-t.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = { version = "2.2.2", features = ["bson-serde_with", "bson-chrono-0_4"] }
serde = { version = "1.0", features = ["derive"] }
actix-web = "4.1.0"
dotenv = "0.15.0"
actix-identity = "0.4.0"
actix-files = "0.6.1"
serde_json = "1"
futures = "0.3"
url = "2"
nanoid = "0.4.0"
chrono = { version = "0.4", features = ["serde"] }
serde_with = "1.14.0"