[package]
name = "link-shortener"
version = "0.1.4"
edition = "2021"
license = "MIT"
authors = ["Mikkel-T <mikkel@mikkel-t.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-identity = "0.5.2"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-web = "4.3.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
futures = "0.3"
mongodb = { version = "2.3.1", features = ["bson-serde_with", "bson-chrono-0_4"] }
nanoid = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_with = "1"
url = "2"